deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: docker-registry
  name: docker-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      containers:
        - env:
            - name: REGISTRY_HTTP_ADDR
              value: ":5000"
            - name: REGISTRY_STORAGE_FILESYSTEM_ROOTDIRECTORY
              value: "/var/lib/registry"
          image: registry:2.7
          imagePullPolicy: Always
          name: docker-registry
          ports:
            - containerPort: 5000
          volumeMounts:
            - mountPath: "/var/lib/registry"
              name: registry-data
      volumes:
        - name: registry-data
          persistentVolumeClaim:
            claimName: docker-registry-pvc
