service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
spec:
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: docker-registry
  type: NodePort
